# microlog

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: copilot-instructions.md
.github/workflows/: rust.yml
benches/: README.md  engine_bench.rs  query_bench.rs
scripts/: check.sh
src/: engine.rs  lib.rs
