[package]
name = "microlog"
version = "0.1.0"
edition = "2021"
authors = ["Elian Gidoni <elianmdp@gmail.com>"]
description = "A micro Datalog engine implementation in Rust"
license = "MIT"
repository = "https://github.com/eliangidoni/microlog"
keywords = ["datalog", "logic", "query", "database"]
categories = ["database", "algorithms"]

[dependencies]
# Error handling - as recommended in guidelines
anyhow = "1.0"
thiserror = "1.0"

# Logging - as recommended in guidelines
log = "0.4"
env_logger = "0.11"

# Serialization for data exchange (optional feature)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# String handling utilities
bstr = "1.9"

# Collections and data structures
indexmap = "2.2"
smallvec = "1.13"

# Parsing utilities (for query parsing)
nom = { version = "7.1", optional = true }

# Async support (if needed for future async features)
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
# Testing utilities - as recommended in guidelines
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["serde"]

# Serialization support
serde = ["dep:serde", "dep:serde_json"]

# Query parsing support
parsing = ["dep:nom"]

# Async runtime support
async = ["dep:tokio", "dep:futures"]

# All features
full = ["serde", "parsing", "async"]

[[bench]]
name = "engine_bench"
harness = false
required-features = []

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
# Optimized for performance
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
# Optimized for test performance
opt-level = 1
debug = true

[profile.bench]
# Optimized for benchmarks
opt-level = 3
debug = false
lto = true

# Clippy configuration - following guidelines
[lints.clippy]
all = "warn"
pedantic = "warn"
cargo = "warn"

[lints.rust]
# Enforce good practices
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
